# paperlab-public

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  mypy.ini  nixpacks.toml  pubspec.yaml  pyproject.toml  railway.toml
.claude/commands/: arch-check.md  code-check-all.md  code-check-api.md  code-check-cli.md  code-check-config.md  code-check-data.md  code-check-domain.md  code-check-evaluation.md  code-check-loading.md  code-check-method.md  code-check-recommend.md  code-check-services.md  code-check-utils.md  context-check.md  context-prune.md  flutter-check-patterns.md  flutter-check-safety.md  flutter-check-structure.md  quick-code-check.md  strategy-check.md  ui-check-code.md  wf-complete.md  wf-create.md  wf-implement.md  wf-review.md  wf-validate.md
.github/workflows/: deploy-web.yml
android/app/: build.gradle.kts
context/: GOVERNANCE.md  README.md
context/api/: AUTHENTICATION.md  PATTERNS.md  README.md  WORKFLOWS.md
context/backend/: ARCHITECTURE.md  CLI.md  DATA-LOADING.md  DATABASE.md  EVALUATION.md  FORMATTING.md  MARKING.md  PAPER-MARKING.md  PATH-CONFIGURATION.md  RATE_LIMITS.md  README.md  REPOSITORIES.md  STORAGE.md  SUBMISSIONS.md  TESTING.md
context/frontend/: API-INTEGRATION.md  ARCHITECTURE.md  DESIGN_SYSTEM.md  MODELS.md  NAVIGATION.md  PERFORMANCE.md  README.md  STATE-MANAGEMENT.md  TESTING.md  WIDGETS.md
context/landing/: README.md
context/shared/: BRANDING.md  DESIGN.md  JSON-FORMATS.md  MISSION.md  README.md  ROADMAP.md
data/beta-testing/: onboarding-email-template.md
data/config/: llm_models.json  sample_data.json
data/db/: evaluation_results_schema.sql  schema.sql
docs/: _redirects  index.html
docs/beta/: index.md
docs/legal/: privacy-policy.md
integration_test/: agent_interaction_test.dart
ios/Flutter/: Production.xcconfig
ios/Runner/: Info.plist  PrivacyInfo.xcprivacy
ios/Runner.xcodeproj/: project.pbxproj
landing/: .env.example  next.config.ts  package-lock.json  package.json
lib/: app_init.dart  config.dart  driver_main.dart  main.dart  router.dart
lib/driver/: agent_interaction.dart  driver_logger.dart  driver_state_widget.dart  navigation_observer.dart  snackbar_interceptor.dart
lib/exceptions/: network_exceptions.dart
lib/models/: content_block.dart  mark_criterion_result.dart  marking_status.dart  paper_attempt.dart  paper_attempt_state.dart  paper_metadata.dart  paper_result.dart  question_attempt.dart  question_attempt_state.dart  question_detail_result.dart  question_metadata.dart  question_part_result.dart  question_result.dart  score.dart  selection_field.dart  student_work_image.dart  upload_state.dart
lib/providers/: attempts_provider.dart  discovery_provider.dart  providers.dart  results_provider.dart  status_provider.dart  upload_provider.dart
linux/: CMakeLists.txt
tests/: __init__.py  conftest.py  test_imports.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+476 files in other folders)
